Attempts to optimize the code and bybass the limit of products causing OOME