@@ -5,3 +5,6 @@ version := "1.0"
 scalaVersion := "2.11.8"
 
 libraryDependencies += "org.scalatest" %% "scalatest" % "2.2.6" % "test"
+fork in run := true
+javaOptions in run ++= Seq(
+  "-Xms256M", "-Xmx2G", "-XX:MaxPermSize=1024M", "-XX:+UseConcMarkSweepGC")
